--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlite:D:\\Programs\\util\\sqlite-tools-win32-x86-3290000\\dandc.db
+spring.datasource.url=jdbc:sqlite:dandc.db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
